Fix: scrollbar in navbar and breakpoint for laptop
fixed scrollbar design in navbar and changed breakpoint for desktops for better UI in tablet size devices.

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 640px) {
+@media screen and (min-width: 769px) {
   .app-layout {
     display: grid;
     grid-template-columns: 30vw 70vw;
