--- a/src/components/modal/contents/newGroup.css
+++ b/src/components/modal/contents/newGroup.css
@@ -107,7 +107,7 @@ input[type="radio"] {
     }
 }
 
-@media screen and (min-width: 640px) {
+@media screen and (min-width: 769px) {
     .new-grp-form-container {
         padding: 1.5rem 2.3rem;
         width: min(500px, 50vw);
